--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.10.3",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
