--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate:postgres": "dotenv -e .env.sample -- npx prisma migrate deploy"
   },
   "dependencies": {
     "@apollo/client": "^3.11.4",
+    "@auth/prisma-adapter": "^2.4.2",
+    "@prisma/client": "^5.18.0",
     "graphql": "^16.9.0",
+    "mysql2": "^3.11.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.10.3",
