--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.11.4",
     "@auth/prisma-adapter": "^2.4.2",
     "@prisma/client": "^5.18.0",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.9.0",
     "mysql2": "^3.11.0",
     "next": "14.2.4",
@@ -20,6 +21,7 @@
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
     "react-intersection-observer": "^9.10.3",
     "recoil": "^0.7.7"
   },
