--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.11.4",
     "@auth/prisma-adapter": "^2.4.2",
     "@prisma/client": "^5.18.0",
+    "@tanstack/react-query": "^5.52.1",
     "bcrypt": "^5.1.1",
     "graphql": "^16.9.0",
     "mysql2": "^3.11.0",
