--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@prisma/client": "^5.18.0",
     "@tanstack/react-query": "^5.52.1",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.4",
     "graphql": "^16.9.0",
     "mysql2": "^3.11.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "prisma": "^5.18.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-intersection-observer": "^9.10.3",
