--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@auth/prisma-adapter": "^2.4.2",
     "@prisma/client": "^5.18.0",
     "@tanstack/react-query": "^5.52.1",
+    "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.4",
     "graphql": "^16.9.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
